--- a/index4.html
+++ b/index4.html
@@ -89,7 +89,7 @@
 				</div>
 				<a href="#contact" class="ba-intro-section__cta ba-intro-section__cta--video" data-video-cta>Try Now</a>
 		</div>
-		<video class="ba-intro-section__video" data-video-block loop playsinline>
+		<video class="ba-intro-section__video" data-video-block loop>
 				<source src="videos/1.mp4" type="video/mp4">
 		</video>
 </section>
