init mobile version

--- a/index4.html
+++ b/index4.html
@@ -80,19 +80,26 @@
 								<h1 class="ba-intro-section__title">Amazon Seller Business Management Software</h1>
 								<div class="ba-intro-section__cta-block">
 										<a href="#contact" class="ba-intro-section__cta">Try Now</a>
-										<button class="ba-intro-section__cta ba-intro-section__cta--white" data-play-video>watch video</button>
+										<button class="ba-intro-section__cta ba-intro-section__cta--white d-none d-lg-inline-block" data-play-video>watch video</button>
+										<button class="ba-intro-section__cta ba-intro-section__cta--white d-lg-none" href="#video-popup" data-play-video-mobile>watch video</button>
 								</div>
 						</div>
 						<div class="col-12 col-lg-4 d-flex justify-content-center">
-								<img src="images/man.png" alt="Amazon Seller Business Management Software" width="372" height="620">
+								<img src="images/man.png" alt="Amazon Seller Business Management Software" width="474" height="626">
 						</div>
 				</div>
 				<a href="#contact" class="ba-intro-section__cta ba-intro-section__cta--video" data-video-cta>Try Now</a>
 		</div>
-		<video class="ba-intro-section__video" data-video-block loop>
+		<video class="ba-intro-section__video" data-video-block loop controls>
 				<source src="videos/1.mp4" type="video/mp4">
 		</video>
 </section>
+<div id="video-popup" class="mfp-hide">
+		<video class="ba-video-mobile" preload="none" controls data-video-mobile>
+				<source src="#" type="video/mp4">
+		</video>
+</div>
+
 
 <section class="section-grey section-top-border" id="about"><!--begin container -->
     <div class="container"><!--begin row -->
