fix fullscrean open

--- a/index4.html
+++ b/index4.html
@@ -95,7 +95,7 @@
 		</video>
 </section>
 <div id="video-popup" class="mfp-hide">
-		<video class="ba-video-mobile" preload="none" controls data-video-mobile>
+		<video class="ba-video-mobile" preload="none" controls playsinline data-video-mobile>
 				<source src="#" type="video/mp4">
 		</video>
 </div>
