--- a/index4.html
+++ b/index4.html
@@ -90,7 +90,7 @@
 				</div>
 				<a href="#contact" class="ba-intro-section__cta ba-intro-section__cta--video" data-video-cta>Try Now</a>
 		</div>
-		<video class="ba-intro-section__video" data-video-block loop controls>
+		<video class="ba-intro-section__video" data-video-block loop controls data-show-time="5" data-visible-time="3">
 				<source src="videos/1.mp4" type="video/mp4">
 		</video>
 </section>
